HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallExpressionsDiagnostic/Source/Main.uv
//! Rejected expression specimen for call expression diagnostic coverage.

public procedure callExpressionsDiagnosticReference() -> i32 {
    let value: i32 = 3
    return value()
}
